--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   </div>
   <div id="legend-container">
     <div id="legend"></div>
+    <div class="clear"></div>
     <div id="pie-chart"></div>
   </div>
   <script src="d3.v3.js"></script>
