--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
     stroke-width: 2px;
   }
 
+  .tooltip {
+    position: absolute;
+    width: 200px;
+    height: 28px;
+    pointer-events: none;
+  }
+
   #legend-container, #line-chart-container, #line-chart, #scatter-plot-container {
     float: left;
   }
@@ -59,6 +66,7 @@
   <div id="legend-container">
     <div id="legend"></div>
     <div class="clear"></div>
+    <span>Running time distribution:</span>
     <div id="pie-chart"></div>
   </div>
   <script src="d3.v3.js"></script>
