--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 
   .tooltip {
     position: absolute;
-    width: 200px;
-    height: 28px;
     pointer-events: none;
+    background-color: white;
+    border: 1px solid;
+    padding: 2px;
   }
 
   #legend-container, #line-chart-container, #line-chart, #scatter-plot-container {
