--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
   <div id="legend-container">
     <div id="legend"></div>
     <div class="clear"></div>
-    <span>Running time distribution:</span>
+    <div>Running time distribution:</div>
+    <div><span id="total-time"></span> in total</div>
     <div id="pie-chart"></div>
   </div>
   <script src="d3.v3.js"></script>
