Emphasize dots in scatter plot when mouseover

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     opacity: 1;
   }
 
+  .dot.emphasized, .dot.emphasized.faded {
+    opacity: 1;
+  }
+
   .tooltip {
     position: absolute;
     pointer-events: none;
