Avoid overlap between line chart and pie chart

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
     float: left;
   }
 
+  #line-chart-container {
+    margin-right: 200px;
+  }
+
   #scatter-plot {
     margin-top: 30px;
   }
