Fix animation and gap

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <style>
   body {
     font: 13px sans-serif;
+    width: 1180px;
   }
 
   .axis path,
@@ -49,16 +50,12 @@
     float: left;
   }
 
-  #line-chart-container {
-    margin-right: 200px;
-  }
-
   #scatter-plot {
     margin-top: 30px;
   }
 
   #legend-container {
-    right: 5px;
+    margin-left: 950px;
     position: fixed;
   }
 
